--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,13 @@
     "axios": "^1.13.2",
     "logo": "^0.2.0",
     "react": "^19.2.0",
+    "react-datepicker": "^9.1.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.6",
-    "socket.io-client": "^4.8.1"
+    "react-toastify": "^11.0.5",
+    "socket.io-client": "^4.8.1",
+    "toastify": "^2.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
